# bookstore

./: Dockerfile  README.md  docker-compose.yml  env.dev  pyproject.toml
.github/workflows/: build.yml  deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/migrations/: 0001_initial.py
order/test_viewsets/: test_order_viewset.py
order/tests_order/: test_order_serializer.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: category.py
product/serializers/: category_serializer.py
product/test_viewset/: test_category_viewset.py  test_product_viewset.py
product/tests_product/: test_category_serializer.py  test_product_serializer.py
product/viewsets/: product_viewset.py
